# C_I_2022_s302179

./: .gitignore  sphere.py
lab1/: A_star_results.csv  Greedy_best_first_results.csv  README.md  lab1.ipynb  pyproject.toml  report.csv  show_results.py
lab2/: README.md  lab02.py  show_results.py
lab2/results/: results100.csv  results1000.csv  results20.csv  results500.csv  results5000.csv
lab3/: lab3.ipynb  lab3.py  lab3_nim.ipynb  min.py
lab3/reinforcement/: Nim.py  Player.py  reninforcement.py  strategies.py
one_max_problem/: one_max.py
