[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Filippo Maria Cardano <s292113@polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
logging = "^0.4.9.6"
heapq_max = "^0.21"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
